*
* 0.2.8
*

- Implemented agent proxy
- Object tools fully implemented (including configuration)
- Added "node capability expiration" feature
- Windows console:
	- Fixed inconsistencies in object access control configuration
	- Added voice notifications for alarms (using SAPI)
- Added support for Windows authentication in Microsoft SQL driver
- Server configuration wizard: added possibility to configure service account
- Added support for transactions in database manager
- Fixed issues: #61


*
* 0.2.7
*

- Advanced status calculation mechanism implemented
- Added support for SQLite embedded database engine
- New MIBs added: IEEE 802.11
- PING subagent: added "PacketRate" configuration parameter
- Fixed some portability issues for 64bit platforms
- Fixed build problems with version 0.2.6
- Fixed issues: #53, #55, #59, #60


*
* 0.2.6
*

- Added possibility to change size of ICMP echo request packets sent by server
- Added built-in syslog server
- Implemented retrieving of only last N records from event log
- Implemented "Select DCI" function for templates
- Implemented own MIB compiler, removing last dependency from Net-SNMP library
- MIBs now transferred to client in compiled form, reducing network traffic
  and making console startup faster
- Implemented correct translation of SNMPv1 trap id to SNMPv2 trap id
- Added advanced DCI collection scheduling
- Core agent:
	- Ported to AIX
	- Fixed bug in signal handling causing agent to crash on shutdown
	- Implemented autoloading of platform subagent on UNIX and NetWare
	- Fixed broken under NT4 Net.InterfaceList enum
- PING subagent:
	- Ported to NetWare and AIX
	- Added "packet size" argument to Icmp.Ping(*) parameter
	- Added "packet size" option to target configuration
	- Added DefaultPacketSize configuration parameter
- Port checker subagent ported to AIX
- Added possibility to build statically linked agents
- Event configuration improved
- New MIBs added: BGP4, PowerNet (APC), PRINTER,