@@ -63,3 +63,4 @@ TCHAR g_szWorkDir[MAX_PATH];
 
 COLORREF g_rgbInfoLineButtons = RGB(130, 70, 210);
 COLORREF g_rgbInfoLineBackground = RGB(255, 255, 255);
+COLORREF g_rgbInfoLineTimer = RGB(0, 0, 0);
