@@ -71,6 +71,7 @@ extern TCHAR *g_szStatusTextSmall[];
 extern TCHAR g_szWorkDir[];
 extern COLORREF g_rgbInfoLineButtons;
 extern COLORREF g_rgbInfoLineBackground;
+extern COLORREF g_rgbInfoLineTimer;
 extern DWORD g_dwOptions;
 extern MONITORINFOEX *g_pMonitorList;
 extern DWORD g_dwNumMonitors;
