@@ -20,14 +20,14 @@ Class2=CChildView
 Class5=CAlarmList
 Class6=CInfoLine
 Class7=CRequestProcessingDlg
-Resource3=IDD_REQUEST_WAIT (English (U.S.))
+Resource3=IDD_ABOUTBOX (English (U.S.))
 Resource4=IDR_MAINFRAME
 Class9=CFlatButton
 Class10=CSettingsDlg
 Resource5=IDM_CONTEXT
-Resource7=IDD_SETTINGS (English (U.S.))
-Resource8=IDD_ABOUTBOX (English (U.S.))
-Resource9=IDR_MAINFRAME (English (U.S.))
+Resource7=IDD_REQUEST_WAIT (English (U.S.))
+Resource8=IDR_MAINFRAME (English (U.S.))
+Resource9=IDD_SETTINGS (English (U.S.))
 Class8=CAlarmBrowser
 Resource10=IDM_CONTEXT (English (U.S.))
 
