@@ -16,9 +16,9 @@ Class7=CEventBrowser
 Class9=CMapView
 
 ResourceCount=135
-Resource1=IDA_DC_EDITOR (English (U.S.))
+Resource1=IDD_SET_PASSWORD (English (U.S.))
 Resource2=IDD_OBJECT_NODE_GENERAL
-Resource3=IDD_SET_PASSWORD (English (U.S.))
+Resource3=IDD_ACTION_PROPERTIES (English (U.S.))
 Resource4=IDD_SELECT_OBJECT
 Resource5=IDD_SELECT_ACTION
 Class2=CChildView
@@ -32,9 +32,9 @@ Resource7=IDD_NEW_USER
 Class12=CObjectBrowser
 Resource8=IDD_CREATE_CONTAINER
 Class13=CObjectPropDlg
-Resource9=IDA_MDI_DEFAULT (English (U.S.))
-Resource10=IDD_GROUP_PROPERTIES (English (U.S.))
-Resource11=IDD_DCI_SCHEDULE (English (U.S.))
+Resource9=IDA_DC_EDITOR (English (U.S.))
+Resource10=IDD_NEW_ACTION (English (U.S.))
+Resource11=IDA_EVENT_EDITOR (English (U.S.))
 Resource12=IDR_CTRLPANEL (English (U.S.))
 Resource13=IDR_EVENTS (English (U.S.))
 Resource14=IDR_MAPFRAME (English (U.S.))
@@ -42,17 +42,17 @@ Resource15=IDR_OBJECTS (English (U.S.))
 Resource16=IDD_DUMMY (English (U.S.))
 Class14=CEventEditor
 Class15=CEditEventDlg
-Resource17=IDD_CREATE_NODE (English (U.S.))
+Resource17=IDD_OBJECT_RELATIONS (English (U.S.))
 Class16=CDebugFrame
-Resource18=IDD_DCI_COLLECTION (English (U.S.))
+Resource18=IDD_SELECT_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
 Resource20=IDD_SELECT_EVENT
 Class17=CObjectPreview
-Resource21=IDD_OBJECT_NODE_GENERAL (English (U.S.))
+Resource21=IDD_MIB_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_SELECT_EVENT (English (U.S.))
+Resource22=IDD_DATA_QUERY (English (U.S.))
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
@@ -61,14 +61,14 @@ Class24=CObjectPropCaps
 Class25=CObjectPropSheet
 Resource24=IDA_MDI_DEFAULT
 Class26=CRequestProcessingDlg
-Resource25=IDD_DESKTOP_SAVE_AS (English (U.S.))
+Resource25=IDD_NEW_OBJECT_TOOL (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
 Resource27=IDD_EDIT_RULE_ALARM
-Resource28=IDD_EDIT_IP_SUBNET (English (U.S.))
+Resource28=IDA_ALARM_BROWSER (English (U.S.))
 Class27=CObjectPropsGeneral
-Resource29=IDD_OBJECT_GENERAL (English (U.S.))
+Resource29=IDD_SELECT_EVENT (English (U.S.))
 Class28=CObjectPropsSecurity
-Resource30=IDD_DCI_THRESHOLDS (English (U.S.))
+Resource30=IDD_CREATE_CONTAINER (English (U.S.))
 Resource31=IDD_SELECT_USER
 Resource32=IDD_OBJECT_SECURITY
 Class29=CUserSelectDlg
@@ -79,36 +79,36 @@ Class31=CNewUserDlg
 Resource35=IDD_THRESHOLD
 Resource36=IDA_EPP
 Class32=CUserPropDlg
-Resource37=IDD_USER_PROPERTIES (English (U.S.))
+Resource37=IDD_CP_GENERAL (English (U.S.))
 Resource38=IDD_ABOUTBOX
 Class33=CGroupPropDlg
 Resource39=IDD_CP_GENERAL
 Resource40=IDA_TRAP_EDITOR
 Resource41=IDM_VIEW_SPECIFIC
-Resource42=IDD_SELECT_USER (English (U.S.))
+Resource42=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
 Class36=CNetSummaryFrame
 Class37=CDataCollectionEditor
-Resource43=IDD_OBJECT_PRESENTATION (English (U.S.))
+Resource43=IDD_EDIT_TRAP (English (U.S.))
 Class38=CDCIPropPage
-Resource44=IDD_EDIT_RULE_COMMENT (English (U.S.))
+Resource44=IDD_CREATE_TEMPLATE (English (U.S.))
 Class39=CDCIDataView
-Resource45=IDD_MIB_BROWSER (English (U.S.))
+Resource45=IDD_DCI_TRANSFORM (English (U.S.))
 Class40=CGraph
 Class41=CGraphFrame
 Class42=CDCIThresholdsPage
-Resource46=IDR_MAINFRAME (English (U.S.))
-Resource47=IDD_EDIT_VARIABLE (English (U.S.))
+Resource46=IDD_EDIT_EVENT (English (U.S.))
+Resource47=IDA_MDI_DEFAULT (English (U.S.))
 Resource48=IDM_CONTEXT
 Class43=CThresholdDlg
-Resource49=IDA_EPP (English (U.S.))
+Resource49=IDD_ABOUTBOX (English (U.S.))
 Resource50=IDD_EDIT_TRAP_ARG
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
-Resource51=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
+Resource51=IDD_DCI_SCHEDULE (English (U.S.))
 Resource52=IDD_CREATE_NODE
 Class48=CObjectSelDlg
 Resource53=IDD_OBJECT_CAPS
@@ -117,22 +117,22 @@ Class49=CRuleCommentDlg
 Resource55=IDD_DCI_COLLECTION
 Class50=CEventSelDlg
 Resource56=IDD_DATA_QUERY
-Resource57=IDD_CREATE_NETSRV (English (U.S.))
+Resource57=IDD_SAVE_AGENT_CFG (English (U.S.))
 Resource58=IDD_CREATE_TG
-Resource59=IDM_VIEW_SPECIFIC (English (U.S.))
-Resource60=IDD_OBJTOOL_OPTIONS (English (U.S.))
+Resource59=IDA_AGENT_CFG_EDITOR (English (U.S.))
+Resource60=IDA_PACKAGE_MGR (English (U.S.))
 Class51=CObjectPropsPresentation
-Resource61=IDA_AGENT_CFG_EDITOR (English (U.S.))
+Resource61=IDD_GROUP_PROPERTIES (English (U.S.))
 Resource62=IDD_EDIT_RULE_COMMENT
 Class52=CRuleSeverityDlg
 Resource63=IDD_ACTION_PROPERTIES
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
-Resource64=IDD_NEW_USER (English (U.S.))
+Resource64=IDD_EDIT_RULE_ALARM (English (U.S.))
 Resource65=IDD_DCI_TRANSFORM
-Resource66=IDD_OBJECT_SECURITY (English (U.S.))
-Resource67=IDD_OBJTOOL_GENERAL (English (U.S.))
-Resource68=IDD_THRESHOLD (English (U.S.))
+Resource66=IDD_OBJECT_PRESENTATION (English (U.S.))
+Resource67=IDA_TRAP_EDITOR (English (U.S.))
+Resource68=IDD_CREATE_NODE (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
 Resource69=IDA_ACTION_EDITOR
@@ -143,18 +143,18 @@ Class58=CEditActionDlg
 Resource72=IDA_NETMAP
 Class59=CActionSelDlg
 Resource73=IDD_MIB_BROWSER
-Resource74=IDD_OBJECT_CAPS (English (U.S.))
-Resource75=IDD_CREATE_CONTAINER (English (U.S.))
+Resource74=IDD_SELECT_OBJECT (English (U.S.))
+Resource75=IDD_OBJECT_NODE_POLL (English (U.S.))
 Resource76=IDD_USER_PROPERTIES
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
 Resource77=IDR_MAINFRAME
 Class62=CCreateNodeDlg
-Resource78=IDD_EDIT_EVENT (English (U.S.))
-Resource79=IDD_CREATE_VPNC (English (U.S.))
-Resource80=IDD_EDIT_TRAP_ARG (English (U.S.))
+Resource78=IDD_THRESHOLD (English (U.S.))
+Resource79=IDA_OBJECT_BROWSER (English (U.S.))
+Resource80=IDD_EDIT_VARIABLE (English (U.S.))
 Class63=CDCITransformPage
-Resource81=IDD_REQUEST_PROCESSING (English (U.S.))
+Resource81=IDD_EDIT_RULE_COMMENT (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
@@ -171,7 +171,7 @@ Resource89=IDA_ALARM_BROWSER
 Class69=CDataQueryDlg
 Resource90=IDD_EDIT_RULE_SEVERITY
 Class70=CTrapEditDlg
-Resource91=IDD_GRAPH_PROP_DATA (English (U.S.))
+Resource91=IDD_REMOVE_TEMPLATE
 Class71=CTrapParamDlg
 Resource92=IDD_EDIT_EVENT
 Resource93=IDD_CREATE_TEMPLATE
@@ -179,82 +179,82 @@ Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
 Resource94=IDD_GROUP_PROPERTIES
-Resource95=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource96=IDM_CONTEXT (English (U.S.))
-Resource97=IDD_CHANGE_IP
-Resource98=IDD_INPUT_BOX (English (U.S.))
-Resource99=IDA_SERVER_CFG_EDITOR (English (U.S.))
-Resource100=IDD_EDIT_TRAP (English (U.S.))
-Resource101=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource102=IDD_SELECT_ACTION (English (U.S.))
-Resource103=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource104=IDD_OBJECT_NODE_POLL (English (U.S.))
-Resource105=IDA_ACTION_EDITOR (English (U.S.))
-Resource106=IDA_LAST_VALUES (English (U.S.))
-Resource107=IDD_GRAPH_PROP_SETTINGS (English (U.S.))
+Resource95=IDA_NETMAP (English (U.S.))
+Resource96=IDM_VIEW_SPECIFIC (English (U.S.))
+Resource97=IDA_SERVER_CFG_EDITOR (English (U.S.))
+Resource98=IDD_EDIT_IP_SUBNET (English (U.S.))
+Resource99=IDD_USER_PROPERTIES (English (U.S.))
+Resource100=IDD_DCI_DATA_EXPORT (English (U.S.))
+Resource101=IDR_MAINFRAME (English (U.S.))
+Resource102=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
+Resource103=IDD_OBJECT_VPNC_GENERAL (English (U.S.))
+Resource104=IDD_OBJECT_STATUS (English (U.S.))
+Resource105=IDD_REQUEST_PROCESSING (English (U.S.))
+Resource106=IDD_NEW_USER (English (U.S.))
+Resource107=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Class75=CInternalItemSelDlg
-Resource108=IDD_CP_GENERAL (English (U.S.))
+Resource108=IDD_SELECT_AGENT_PARAM (English (U.S.))
 Class76=CAgentParamSelDlg
-Resource109=IDD_LASTVAL_PROP (English (U.S.))
+Resource109=IDD_CHANGE_IP
 Class77=CInputBox
-Resource110=IDD_CREATE_TEMPLATE (English (U.S.))
+Resource110=IDD_GRAPH_PROP_DATA (English (U.S.))
 Class78=CCreateNetSrvDlg
-Resource111=IDD_CREATE_TG (English (U.S.))
+Resource111=IDD_GRAPH_PROP_SETTINGS (English (U.S.))
 Class79=CNetSrvPropsGeneral
 Resource112=IDD_LOGIN (English (U.S.))
 Class80=CNodePropsPolling
 Class81=CDeploymentView
 Class82=CLastValuesView
 Class83=CValueList
-Resource113=IDD_EDIT_RULE_ALARM (English (U.S.))
+Resource113=IDD_SELECT_INTERNAL_ITEM (English (U.S.))
 Class84=CObjectPropsRelations
-Resource114=IDD_DATA_QUERY (English (U.S.))
+Resource114=IDD_LASTVAL_PROP (English (U.S.))
 Class85=CSaveDesktopDlg
-Resource115=IDD_DCI_TRANSFORM (English (U.S.))
+Resource115=IDD_DESKTOP_SAVE_AS (English (U.S.))
 Class86=CGraphSettingsPage
-Resource116=IDD_ACTION_PROPERTIES (English (U.S.))
+Resource116=IDD_CREATE_NETSRV (English (U.S.))
 Class87=CGraphDataPage
-Resource117=IDA_TRAP_EDITOR (English (U.S.))
+Resource117=IDD_OBJECT_GENERAL (English (U.S.))
 Class88=CRemoveTemplateDlg
-Resource118=IDD_OBJECT_RELATIONS (English (U.S.))
+Resource118=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class89=CAddrChangeDlg
-Resource119=IDA_NETMAP (English (U.S.))
+Resource119=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Class90=CLastValuesPropDlg
 Class91=CAgentCfgEditor
-Resource120=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
+Resource120=IDD_DCI_COLLECTION (English (U.S.))
 Class92=CDataExportDlg
 Class93=CServerCfgEditor
-Resource121=IDD_OBJECT_VPNC_GENERAL (English (U.S.))
-Resource122=IDD_NEW_OBJECT_TOOL (English (U.S.))
+Resource121=IDA_EPP (English (U.S.))
+Resource122=IDA_GRAPH (English (U.S.))
 Class94=CEditVariableDlg
-Resource123=IDD_SELECT_OBJECT (English (U.S.))
+Resource123=IDD_CREATE_TG (English (U.S.))
 Class95=CCreateVPNConnDlg
-Resource124=IDD_ABOUTBOX (English (U.S.))
+Resource124=IDD_DCI_THRESHOLDS (English (U.S.))
 Class96=CVPNCPropsGeneral
-Resource125=IDD_OBJECT_STATUS (English (U.S.))
+Resource125=IDA_ACTION_EDITOR (English (U.S.))
 Class97=CEditSubnetDlg
-Resource126=IDA_ALARM_BROWSER (English (U.S.))
-Resource127=IDA_PACKAGE_MGR (English (U.S.))
+Resource126=IDM_CONTEXT (English (U.S.))
+Resource127=IDD_SELECT_USER (English (U.S.))
 Class98=CModifiedAgentCfgDlg
 Class99=CSimpleSplitter
 Class100=CAdvSplitter
-Resource128=IDA_GRAPH (English (U.S.))
+Resource128=IDD_OBJECT_SECURITY (English (U.S.))
 Class101=CTableView
 Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_REMOVE_TEMPLATE
+Resource129=IDA_LAST_VALUES (English (U.S.))
 Class106=CDCISchedulePage
-Resource130=IDD_EDIT_RULE_SEVERITY (English (U.S.))
+Resource130=IDD_EDIT_TRAP_ARG (English (U.S.))
 Class107=CObjectPropsStatus
 Class108=CObjectToolsEditor
-Resource131=IDD_SELECT_INTERNAL_ITEM (English (U.S.))
-Resource132=IDA_EVENT_EDITOR (English (U.S.))
+Resource131=IDD_CREATE_VPNC (English (U.S.))
+Resource132=IDD_OBJECT_CAPS (English (U.S.))
 Class109=CObjToolPropGeneral
-Resource133=IDA_OBJECT_BROWSER (English (U.S.))
+Resource133=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Class110=CObjToolPropColumns
-Resource134=IDD_NEW_ACTION (English (U.S.))
+Resource134=IDD_INPUT_BOX (English (U.S.))
 Class111=CNewObjectToolDlg
 Class112=CObjToolPropOptions
 Resource135=IDD_OBJTOOL_COLUMNS
@@ -822,7 +822,7 @@ Command61=ID_ALARM_ACKNOWLEGE
 Command62=ID_ALARM_DELETE
 Command63=ID_ALARM_GOTOSOURCE
 Command64=ID_ALARM_SHOWNODES
-Command65=ID_ALARM_ENABLE_SPEAKER
+Command65=ID_ALARM_SOUNDCONFIGURATION
 Command66=ID_UPDATE_EVENT_LIST
 Command67=ID_CONTROLPANEL_ACTIONS
 Command68=ID_CONTROLPANEL_AGENTPKG
@@ -2141,7 +2141,7 @@ Type=1
 Class=?
 Command1=ID_ALARM_ACKNOWLEGE
 Command2=ID_ALARM_SHOWNODES
-Command3=ID_ALARM_ENABLE_SPEAKER
+Command3=ID_ALARM_SOUNDCONFIGURATION
 Command4=ID_ALARM_DELETE
 CommandCount=4
 
